--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
 }
 .left-sidebar{
     position: absolute;
-    background: #fffca9;
+    background: #d9d9d9;
     height: 100%;
     width: 200px;
 }
